TR12963/teleuse-to-mgd_java_api

--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,5 @@
-TAG: mgd_java_api-?
-DATE: ?
-STAFF: ?
-CHANGES: TR12963/teleuse-to-mgd_java_api
+TAG: mgd_java_api-6-0-14-1
+DATE: 04/03/2019
+STAFF: lec 
+TR12963/teleuse-to-mgd_java_api
+
