--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,8 @@
+TAG: mgd_java_api-6-0-14-3
 TAG: mgd_java_api-6-0-14-2
 TAG: mgd_java_api-6-0-14-1
 DATE: 04/03/2019
 STAFF: lec 
 TR12963/teleuse-to-mgd_java_api
+Install/app.properties.default
 
