TR12963/fix Install/app.properties.default

--- a/Install
+++ b/Install
@@ -24,9 +24,9 @@ echo "swarm.ds.username=${MGD_DBUSER}" >> ${PROP_FILE}
 echo "swarm.ds.password=`cat ${PG_1LINE_PASSFILE}`" >> ${PROP_FILE}
 echo "swarm.ds.connection.url=${MGD_JDBC_URL}" >> ${PROP_FILE}
 echo "swarm.access_token=${JAVA_API_TOKEN}" >> ${PROP_FILE}
-echo "swarm.ds.dbname=prod" >> ${PROP_FILE}
-echo "swarm.ds.dbpasswordfile=/usr/local/mgi/live/dbutils/pgdbutilities/.pgpass_1" >> ${PROP_FILE}
+echo "swarm.ds.dbname=${MGD_DBNAME}" >> ${PROP_FILE}
+echo "swarm.ds.dbpasswordfile=${PG_1LINE_PASSFILE}" >> ${PROP_FILE}
 echo "swarm.ds.dbserver=${MGD_DBSERVER}" >> ${PROP_FILE}
-echo "swarm.ds.eiUtilities=/usr/local/mgi/live/dbutils/pgdbutilities/bin/ei/markerWithdrawal.py" >> ${PROP_FILE}
+echo "swarm.ds.eiUtilities=${PG_DBUTILS}/bin/ei/markerWithdrawal.py" >> ${PROP_FILE}
 
 make all
