--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+TAG: mgd_java_api-6-0-14-8
+TAG: mgd_java_api-6-0-14-7
 TAG: mgd_java_api-6-0-14-6
 TAG: mgd_java_api-6-0-14-5
 TAG: mgd_java_api-6-0-14-4
