--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-14-14
+DATE: 05/23/2019
+STAFF: lec
+CHANGES: TR13133/add cmOffset to marker/update
+
 TAG: mgd_java_api-6-0-14-13
 DATE: 05/01/2019
 STAFF: sc
