--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-14-15
+DATE: 07/30/2019
+STAFF: sc
+CHANGES: TR13125 variant module can't delete coordinates
+
 TAG: mgd_java_api-6-0-14-14
 DATE: 05/23/2019
 STAFF: lec
