--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-15-1
+DATE: 12/02/2019
+STAFF: lec
+CHANGES: TR13007/RNA Sequence project
+
 TAG: mgd_java_api-6-0-14-17
 DATE: 08/02/2019
 STAFF: sc
