TR13007/RNA Sequence project/image

--- a/Install
+++ b/Install
@@ -28,5 +28,8 @@ echo "swarm.ds.dbname=${MGD_DBNAME}" >> ${PROP_FILE}
 echo "swarm.ds.dbpasswordfile=${PG_1LINE_PASSFILE}" >> ${PROP_FILE}
 echo "swarm.ds.dbserver=${MGD_DBSERVER}" >> ${PROP_FILE}
 echo "swarm.ds.eiUtilities=${PG_DBUTILS}/bin/ei/markerWithdrawal.py" >> ${PROP_FILE}
+echo "swarm.ds.alleleCombinationUtilities=${PG_DBUTILS}/allcacheload/allelecombinationByGenotype.py" >> ${PROP_FILE}
+echo "swarm.ds.pixeldb=/data/pixeldb" >> ${PROP_FILE}
+echo "swarm.ds.pixeldbCounter=/data/pixeldb/accession/counter" >> ${PROP_FILE}
 
 make all
