--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+TAG: mgd_java_api-6-0-15-16
+TAG: mgd_java_api-6-0-15-15
 TAG: mgd_java_api-6-0-15-14
 TAG: mgd_java_api-6-0-15-13
 TAG: mgd_java_api-6-0-15-12
