--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-15-18
+DATE: 01/16/2020
+STAFF: lec
+CHANGES: TR13230/marker/remove limit
+
 TAG: mgd_java_api-6-0-15-17
 DATE: 12/31/2019
 STAFF: lec
