--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-15-??
+DATE: 01/29/2020
+STAFF: lec
+CHANGES: tr13007-genotye merge
+
 TAG: mgd_java_api-6-0-15-18
 DATE: 01/16/2020
 STAFF: lec
