--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,5 @@
-TAG: mgd_java_api-6-0-15-??
-DATE: 01/29/2020
+TAG: mgd_java_api-6-0-15-1
+DATE: 02/03/2020
 STAFF: lec
 CHANGES: tr13007-genotye merge
 
