--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-15-20
+DATE: 06/03/2020
+STAFF: lec
+CHANGES: TR13315/P-WI Bug: Can't change lit triage reference type
+
 TAG: mgd_java_api-6-0-15-26
 TAG: mgd_java_api-6-0-15-25
 TAG: mgd_java_api-6-0-15-24
