--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-15-28
+DATE: 06/17/2020
+STAFF: lec
+CHANGES: TR13326/statusUpdate/getTerm fix
+
 TAG: mgd_java_api-6-0-15-27
 DATE: 06/03/2020
 STAFF: lec
