TR13204/Infrastructure project/Install

--- a/Install
+++ b/Install
@@ -27,13 +27,13 @@ echo "swarm.access_token=${JAVA_API_TOKEN}" >> ${PROP_FILE}
 echo "swarm.ds.dbname=${MGD_DBNAME}" >> ${PROP_FILE}
 echo "swarm.ds.dbpasswordfile=${PG_1LINE_PASSFILE}" >> ${PROP_FILE}
 echo "swarm.ds.dbserver=${MGD_DBSERVER}" >> ${PROP_FILE}
-echo "swarm.ds.eiUtilities=${PG_DBUTILS}/bin/ei/markerWithdrawal.py" >> ${PROP_FILE}
-echo "swarm.ds.alleleCombinationUtilities=${DBUTILS}/allcacheload/allelecombinationByGenotype.py" >> ${PROP_FILE}
-echo "swarm.ds.mrkLocationUtilities=${DBUTILS}/mrkcacheload/mrklocation.py" >> ${PROP_FILE}
-echo "swarm.ds.mrkrefByMarkerUtilities=${DBUTILS}/mrkcacheload/mrkrefByMarker.py" >> ${PROP_FILE}
-echo "swarm.ds.mrkrefByReferenceUtilities=${DBUTILS}/mrkcacheload/mrkrefByReference.py" >> ${PROP_FILE}
-echo "swarm.ds.mrkmcvUtilities=${DBUTILS}/mrkcacheload/mrkmcv.py" >> ${PROP_FILE}
-echo "swarm.ds.gorefsUtilities=${DBUTILS}/pgdbutilities/bin/ei/GORefs.py" >> ${PROP_FILE}
+echo "swarm.ds.eiUtilities=${PYTHON} ${PG_DBUTILS}/bin/ei/markerWithdrawal.py" >> ${PROP_FILE}
+echo "swarm.ds.alleleCombinationUtilities=${PYTHON} ${DBUTILS}/allcacheload/allelecombinationByGenotype.py" >> ${PROP_FILE}
+echo "swarm.ds.mrkLocationUtilities=${PYTHON} ${DBUTILS}/mrkcacheload/mrklocation.py" >> ${PROP_FILE}
+echo "swarm.ds.mrkrefByMarkerUtilities=${PYTHON} ${DBUTILS}/mrkcacheload/mrkrefByMarker.py" >> ${PROP_FILE}
+echo "swarm.ds.mrkrefByReferenceUtilities=${PYTHON} ${DBUTILS}/mrkcacheload/mrkrefByReference.py" >> ${PROP_FILE}
+echo "swarm.ds.mrkmcvUtilities=${PYTHON} ${DBUTILS}/mrkcacheload/mrkmcv.py" >> ${PROP_FILE}
+echo "swarm.ds.gorefsUtilities=${PYTHON} ${DBUTILS}/pgdbutilities/bin/ei/GORefs.py" >> ${PROP_FILE}
 echo "swarm.ds.pixeldb=/data/pixeldb" >> ${PROP_FILE}
 echo "swarm.ds.pixeldbCounter=/data/pixeldb/accession/counter" >> ${PROP_FILE}
 
