--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,8 @@
-TESTING
-=======
+TAG: mgd_java_api-6-0-16-1
+DATE: 08/24/2020
+STAFF: lec
+TR13204/Infrastructure Release
+
 TAG: mgd_java_api-6-0-15-28
 DATE: 06/17/2020
 STAFF: lec
