--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-16-4
+DATE: 08/30/2020
+STAFF: lec
+CHANGES: TR13204/Infrastructure Release
+allele module/search fix
+
 TAG: mgd_java_api-6-0-16-3
 DATE: 08/30/2020
 STAFF: lec
