TR13204/Infrastructure/Allele

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-16-6
+DATE: 09/03/2020
+STAFF: lec
+CHANGES: TR13204/Infrastructure Release
+alpha testing fixes
+
 TAG: mgd_java_api-6-0-16-5
 TAG: mgd_java_api-6-0-16-4
 DATE: 08/30/2020
