--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,11 @@
-TAG: mgd_java_api-6-0-16-7
-DATE: 09/15/2020
+TAG: mgd_java_api-6-0-16-8
+DATE: 09/16/2020
+STAFF: lec
+CHANGES: TR13204/Infrastructure Release
+alpha testing fixes
+
+TAG: mgd_java_api-6-0-16-6
+DATE: 09/03/2020
 STAFF: lec
 CHANGES: TR13204/Infrastructure Release
 alpha testing fixes
