--- a/HISTORY
+++ b/HISTORY
@@ -4,6 +4,12 @@ STAFF: lec
 CHANGES: TR13204/Infrastructure Release
 alpha testing fixes
 
+TAG: mgd_java_api-6-0-16-7
+DATE: 09/15/2020
+STAFF: lec
+CHANGES: TR13204/Infrastructure Release
+alpha testing fixes
+
 TAG: mgd_java_api-6-0-16-6
 DATE: 09/03/2020
 STAFF: lec
