--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-16-9
+DATE: 09/17/2020
+STAFF: lec
+CHANGES: TR13204/Infrastructure Release
+alpha testing fixes
+
 TAG: mgd_java_api-6-0-16-8
 DATE: 09/16/2020
 STAFF: lec
