--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,6 @@
+TAG: mgd_java_api-6-0-16-10
 TAG: mgd_java_api-6-0-16-9
-DATE: 09/17/2020
+DATE: 09/17/2020-09/18/2020
 STAFF: lec
 CHANGES: TR13204/Infrastructure Release
 alpha testing fixes
