--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: mgd_java_api-6-0-16-11
+DATE: 09/21/2020
+STAFF: lec
+CHANGES:
+imagepane assoc, allele, genotype entities
+one directional only
+
 TAG: mgd_java_api-6-0-16-10
 TAG: mgd_java_api-6-0-16-9
 DATE: 09/17/2020-09/18/2020
