--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: mgd_java_api-6-0-16-12
+DATE: 09/23/2020
+STAFF: lec
+CHANGES:
+allele module/J: query
+allele module/marker clipboard
+
 TAG: mgd_java_api-6-0-16-11
 DATE: 09/21/2020
 STAFF: lec
