--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: mgd_java_api-6-0-16-13
+DATE: 09/30/2020
+STAFF: lec
+CHANGES:
+TR13204/Infrastructure Release
+antibody/query/use prb_source instead of prb_source_view
+
 TAG: mgd_java_api-6-0-16-12
 DATE: 09/23/2020
 STAFF: lec
