TR13412/ltlo: lit triage reference type problem

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-16-19
+DATE: 10/15/2020
+STAFF: lec
+CHANGES:
+TR13412/ltlo: lit triage reference type problem
+
 TAG: mgd_java_api-6-0-16-18
 TAG: mgd_java_api-6-0-16-17
 DATE: 10/05/2020, 10/06/2020
