--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-16-20
+DATE: 11/03/2020
+STAFF: lec
+CHANGES:
+TR13432/pwi/allele/modify
+
 TAG: mgd_java_api-6-0-16-19
 DATE: 10/15/2020
 STAFF: lec
