--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-17-1
+DATE: 05/11/2021
+STAFF: lec
+TR13349/Genome Build 39
+
 TAG: mgd_java_api-6-0-16-22
 DATE: 11/16/2020
 STAFF: sc
