--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,14 @@
+TAG: mgd_java_api-6-0-17-4
+DATE: 05/20/2021
+STAFF: lec
+TR13349/Genome Build 39
+
+TAG: mgd_java_api-6-0-17-3
+TAG: mgd_java_api-6-0-17-2
+DATE: 05/19/2021
+STAFF: pf
+TR13349/Genome Build 39
+
 TAG: mgd_java_api-6-0-17-1
 DATE: 05/11/2021
 STAFF: lec
