--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-17-5
+DATE: 05/25/2021
+STAFF: lec
+TR13349/Genome Build 39
+strain/genotype
+
 TAG: mgd_java_api-6-0-17-4
 DATE: 05/20/2021
 STAFF: lec
