--- a/HISTORY
+++ b/HISTORY
@@ -1,8 +1,10 @@
+TAG: mgd_java_api-6-0-17-6
 TAG: mgd_java_api-6-0-17-5
 DATE: 05/25/2021
 STAFF: lec
 TR13349/Genome Build 39
 strain/genotype
+wts2-627/strain/accession ids/sync "private" setting
 
 TAG: mgd_java_api-6-0-17-4
 DATE: 05/20/2021
