--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-17-7
+DATE: 06/08/2021
+STAFF: lec
+wts2-627/strain/accession ids
+
 TAG: mgd_java_api-6-0-17-6
 TAG: mgd_java_api-6-0-17-5
 DATE: 05/25/2021
