--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-17-8
+DATE: 09/10/2021
+STAFF: sc
+wts2-691 - bug fix don't allow null/empty/only spaces in synonym field update
+
 TAG: mgd_java_api-6-0-17-7
 DATE: 06/08/2021
 STAFF: lec
