--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-17-14
+DATE: 10/22/2021
+STAFF: lec
+wts2-718/Can't remove Pix ID from image record in P-WI
+
 TAG: mgd_java_api-6-0-17-13
 DATE: 10/04/2021
 STAFF: lec
