--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-17-15
+DATE: 12/28/2021
+STAFF: lec
+wts2-743/Add new terms to MCV/TDC
+
 TAG: mgd_java_api-6-0-17-14
 DATE: 10/22/2021
 STAFF: lec
