--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-18-1
+DATE: 01/10/2022
+STAFF: lec
+Yet Another Kitchen Sink (YAKS)
+
 TAG: mgd_java_api-6-0-17-16
 TAG: mgd_java_api-6-0-17-15
 DATE: 12/28/2021
