--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,6 @@
+TAG: mgd_java_api-6-0-18-2
 TAG: mgd_java_api-6-0-18-1
-DATE: 01/10/2022
+DATE: 01/10/2022, 01/19/2022
 STAFF: lec
 Yet Another Kitchen Sink (YAKS)
 
