Yet Another Kitchen Sink (YAKS)

--- a/HISTORY
+++ b/HISTORY
@@ -1,8 +1,9 @@
+TAG: mgd_java_api-6-0-18-5
 TAG: mgd_java_api-6-0-18-4
 TAG: mgd_java_api-6-0-18-3
 TAG: mgd_java_api-6-0-18-2
 TAG: mgd_java_api-6-0-18-1
-DATE: 01/10/2022, 01/19/2022, 01/20/2022
+DATE: 01/10/2022, 01/19/2022, 01/20/2022, 01/24/2022
 STAFF: lec
 Yet Another Kitchen Sink (YAKS)
 
