--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_age-6-0-18-?
+DATE: 01/26/2022
+STAFF: lec
+CHANGES:
+wts2-767/mgi_notechunk/mgi_note merge
+
 TAG: mgd_java_api-6-0-18-5
 TAG: mgd_java_api-6-0-18-4
 TAG: mgd_java_api-6-0-18-3
