--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-18-7
+DATE: 02/09/2022
+STAFF: lec
+wts2-781/pwi/Allele Variant/Types & Effects Popup
+
 TAG: mgd_java_api-6-0-18-6
 TAG: mgd_java_api-6-0-18-5
 TAG: mgd_java_api-6-0-18-4
