Updating HISTORY file

--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,7 @@
-TAG: mgd_java_age-6-0-18-?
-DATE: 01/26/2022
-STAFF: lec
+TAG: mgd_java_age-6-0-18-8
+TAG: mgd_java_age-6-0-18-7
+DATE: 01/26/2022 - 2/21/2022
+STAFF: lec, pf
 CHANGES:
 wts2-767/mgi_notechunk/mgi_note merge
 
