--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_age-6-0-18-10
+DATE: 03/07/2022
+STAFF: lec
+CHANGES:
+wts2-703/new Noctua -> GO Annotation pipeline
+
 TAG: mgd_java_age-6-0-18-9
 TAG: mgd_java_age-6-0-18-8
 TAG: mgd_java_age-6-0-18-7
