--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_age-6-0-18-11
+DATE: 03/10/2022
+STAFF: lec
+CHANGES:
+cre2022/crm-55/Rel_EI: add new Organisms to PWI Production
+
 TAG: mgd_java_age-6-0-18-10
 DATE: 03/07/2022
 STAFF: lec
