cre2022/PWI/Allele Relationship/allelefear

--- a/HISTORY
+++ b/HISTORY
@@ -1,31 +1,31 @@
-TAG: mgd_java_age-6-0-18-13
+TAG: mgd_java_api-6-0-18-13
 DATE: 03/23/2022
 STAFF: lec
 CHANGES:
 cre2022/PWI/Allele Relationship/allelefear
 
-TAG: mgd_java_age-6-0-18-12
+TAG: mgd_java_api-6-0-18-12
 DATE: 03/11/2022
 STAFF: lec
 CHANGES:
 wts2-817/P-WI Probes Module Bug
 #       modified:   src/main/java/org/jax/mgi/mgd/api/model/prb/service/ProbeSourceService.java
 
-TAG: mgd_java_age-6-0-18-11
+TAG: mgd_java_api-6-0-18-11
 DATE: 03/10/2022
 STAFF: lec
 CHANGES:
 cre2022/crm-55/Rel_EI: add new Organisms to PWI Production
 
-TAG: mgd_java_age-6-0-18-10
+TAG: mgd_java_api-6-0-18-10
 DATE: 03/07/2022
 STAFF: lec
 CHANGES:
 wts2-703/new Noctua -> GO Annotation pipeline
 
-TAG: mgd_java_age-6-0-18-9
-TAG: mgd_java_age-6-0-18-8
-TAG: mgd_java_age-6-0-18-7
+TAG: mgd_java_api-6-0-18-9
+TAG: mgd_java_api-6-0-18-8
+TAG: mgd_java_api-6-0-18-7
 DATE: 01/26/2022 - 2/21/2022
 STAFF: lec, pf
 CHANGES:
@@ -55,7 +55,7 @@ wts2-743/Add new terms to MCV/TDC
 TAG: mgd_java_api-6-0-17-14
 DATE: 10/22/2021
 STAFF: lec
-wts2-718/Can't remove Pix ID from image record in P-WI
+wts2-718/Can't remove Pix ID from imapi record in P-WI
 
 TAG: mgd_java_api-6-0-17-13
 DATE: 10/04/2021
@@ -128,7 +128,7 @@ TAG: mgd_java_api-6-0-16-19
 DATE: 10/15/2020
 STAFF: lec
 CHANGES:
-TR13412/ltlo: lit triage reference type problem
+TR13412/ltlo: lit triapi reference type problem
 
 TAG: mgd_java_api-6-0-16-18
 TAG: mgd_java_api-6-0-16-17
@@ -136,7 +136,7 @@ DATE: 10/05/2020, 10/06/2020
 STAFF: lec
 CHANGES:
 TR13404/PWI:Allele problems (SOO and Strain review flag)
-TR13405/apostrophes being added in the PWI Lit Triage module
+TR13405/apostrophes being added in the PWI Lit Triapi module
 
 TAG: mgd_java_api-6-0-16-16
 TAG: mgd_java_api-6-0-16-15
@@ -164,7 +164,7 @@ TAG: mgd_java_api-6-0-16-11
 DATE: 09/21/2020
 STAFF: lec
 CHANGES:
-imagepane assoc, allele, genotype entities
+imapipane assoc, allele, genotype entities
 one directional only
 
 TAG: mgd_java_api-6-0-16-10
@@ -229,7 +229,7 @@ CHANGES: TR13326/statusUpdate/getTerm fix
 TAG: mgd_java_api-6-0-15-27
 DATE: 06/03/2020
 STAFF: lec
-CHANGES: TR13315/P-WI Bug: Can't change lit triage reference type
+CHANGES: TR13315/P-WI Bug: Can't change lit triapi reference type
 
 TAG: mgd_java_api-6-0-15-26
 TAG: mgd_java_api-6-0-15-25
@@ -251,7 +251,7 @@ CHANGES: TR13230/marker/remove limit
 TAG: mgd_java_api-6-0-15-17
 DATE: 12/31/2019
 STAFF: lec
-CHANGES: TR13216/PWI/Lit Triage/Bulk Apply Tag
+CHANGES: TR13216/PWI/Lit Triapi/Bulk Apply Tag
 "refsKey" -> "refsKeys"
 
 TAG: mgd_java_api-6-0-15-16
