--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: mgd_java_api-6-0-18-15
+DATE: 04/06/2022
+STAFF: dbm
+CHANGES: wts2-772
+1) startApi.sh: Use $JAVA instead of hardcode path that doesn't exist on
+                the PWI server where the API is moving to
+
 TAG: mgd_java_api-6-0-18-14
 TAG: mgd_java_api-6-0-18-13
 DATE: 03/23/2022, 03/28/2022
