wts2-787/HT indexing module: issue with searching for notes that include '

--- a/HISTORY
+++ b/HISTORY
@@ -2,7 +2,7 @@ TAG: mgd_java_api-6-0-18-15
 DATE: 04/06/2022
 STAFF: lec
 CHANGES:
-wts2-787/HT indexing module: (likely API) issue with searching for notes that include
+wts2-787/HT indexing module: issue with searching for notes that include '
 
 TAG: mgd_java_api-6-0-18-14
 TAG: mgd_java_api-6-0-18-13
