--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-18-17
+DATE: 04/11/2022
+STAFF: lec
+CHANGES:
+wts2-852/Add ITL repository to the Logical DB & EI
+
 TAG: mgd_java_api-6-0-18-16
 DATE: 04/06/2022
 STAFF: lec
