--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-18-18
+DATE: 04/11/2022
+STAFF: lec
+CHANGES:
+wts2-801/pwi/littriage/Add Relevance= "Not Specified" to the Discard? options in the upper left.
+
 TAG: mgd_java_api-6-0-18-17
 DATE: 04/11/2022
 STAFF: lec
