wts2-743/Add new terms to MCV/TDC

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-18-21
+DATE: 04/14/2022
+STAFF: lec
+CHANGES:
+wts2-743/Add new terms to MCV/TDC
+
 TAG: mgd_java_api-6-0-18-20
 TAG: mgd_java_api-6-0-18-19
 TAG: mgd_java_api-6-0-18-18
