wts2-743/Add new terms to MCV/TDC

--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,6 @@
+TAG: mgd_java_api-6-0-18-22
 TAG: mgd_java_api-6-0-18-21
-DATE: 04/14/2022
+DATE: 04/15/2022
 STAFF: lec
 CHANGES:
 wts2-743/Add new terms to MCV/TDC
