--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-20-1
+DATE: 05/31/2022
+STAFF: lec
+CHANGES: 
+cream 2022/6.20 release
+
 TAG: mgd_java_api-6-0-18-22
 TAG: mgd_java_api-6-0-18-21
 DATE: 04/15/2022
