wts2-883/Move PWI/GXD Index page from SQLAlchemy to Java API

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-20-5
+DATE: 06/13/2022
+STAFF: lec
+wts2-883/Move PWI/GXD Index page from SQLAlchemy to Java API
+
 TAG: mgd_java_api-6-0-20-4
 TAG: mgd_java_api-6-0-20-3
 TAG: mgd_java_api-6-0-20-2
