--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-20-9
+DATE: 06/15/2022
+STAFF: lec
+allele/translator/check marker/location cache
+
 TAG: mgd_java_api-6-0-20-8
 TAG: mgd_java_api-6-0-20-7
 TAG: mgd_java_api-6-0-20-6
