--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-20-10
+DATE: 06/21/2022
+STAFF: lec
+wts2-906/PWI HT index: fix Evaluation State/Curation State rules
+
 TAG: mgd_java_api-6-0-20-9
 DATE: 06/15/2022
 STAFF: lec
