--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-20-12
+DATE: 06/22/2022
+STAFF: lec
+wts913/postgres/idle in transaction issue
+
 TAG: mgd_java_api-6-0-20-11
 TAG: mgd_java_api-6-0-20-10
 DATE: 06/21/2022
