wts914/LitTriage PWI: confidence search not working as expected

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-20-1?
+DATE: 06/23/2022
+STAFF: lec
+wts914/LitTriage PWI: confidence search not working as expected
+
 TAG: mgd_java_api-6-0-20-12
 DATE: 06/22/2022
 STAFF: lec
