wts914/LitTriage PWI: confidence search not working as expected

--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,5 @@
-TAG: mgd_java_api-6-0-20-1?
-DATE: 06/23/2022
+TAG: mgd_java_api-6-0-20-13
+DATE: 06/28/2022
 STAFF: lec
 wts914/LitTriage PWI: confidence search not working as expected
 
