--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-21-1
+DATE: 07/01/2022
+STAFF: lec
+wts2-883/Move PWI/GXD Index page from SQLAlchemy to Java API
+
 TAG: mgd_java_api-6-0-20-13
 DATE: 06/28/2022
 STAFF: lec
