wts2-929/HT index module: unable to add Notes

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-21-2
+DATE: 07/11/2022
+STAFF: lec
+wts2-929/HT index module: unable to add Notes
+
 TAG: mgd_java_api-6-0-21-1
 DATE: 07/01/2022
 STAFF: lec
