wts2-931/CL clipboard in HT index module:  ameloblast appearing 3x

--- a/HISTORY
+++ b/HISTORY
@@ -1,7 +1,9 @@
+TAG: mgd_java_api-6-0-21-3
 TAG: mgd_java_api-6-0-21-2
 DATE: 07/11/2022
 STAFF: lec
 wts2-929/HT index module: unable to add Notes
+wts2-931/CL clipboard in HT index module:  ameloblast appearing 3x
 
 TAG: mgd_java_api-6-0-21-1
 DATE: 07/01/2022
