--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-21-4
+DATE: 07/15/2022
+STAFF: lec
+littriage/reference/create/comment out bib_workflow_data/trigger handles this logic
+
 TAG: mgd_java_api-6-0-21-3
 TAG: mgd_java_api-6-0-21-2
 DATE: 07/11/2022
