wts2-761/MGD db cleanup - MRK_Event/MRK_EventReason

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-22-1
+DATE: 07/28/2022
+STAFF: lec
+wts2-761/MGD db cleanup - MRK_Event/MRK_EventReason
+
 TAG: mgd_java_api-6-0-21-5
 DATE: 07/19/2022
 STAFF: lec
