wts2-953/Recombinase reporter assays making GXD status full coded

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-22-2
+DATE: 08/12/2022
+STAFF: lec
+wts2-953/Recombinase reporter assays making GXD status full coded
+
 TAG: mgd_java_api-6-0-22-1
 DATE: 07/28/2022
 STAFF: lec
