--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mgd_java_api-6-0-22-3
+DATE: 08/22/2022
+STAFF: lec
+wts2-761/MGD db cleanup - gxd vocabs -> voc_vocab/voc_term
+
 TAG: mgd_java_api-6-0-22-2
 DATE: 08/12/2022
 STAFF: lec
