--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgd_java_api-6-0-22-5
+DATE: 09/09/2022
+STAFF: lec
+wts2-888/crm-405/PWI: Move Remaining Pages from Flask+SQLAlchemy to Angular+Java API
+crm-395, crm-396, crm-402, crm-406
+
 TAG: mgd_java_api-6-0-22-4
 TAG: mgd_java_api-6-0-22-3
 DATE: 08/22/2022
