wts2-888/crm-402/PWI: add getByXXX to API for Image

--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,6 @@
+TAG: mgd_java_api-6-0-22-6
 TAG: mgd_java_api-6-0-22-5
-DATE: 09/09/2022
+DATE: 09/09/2022, 09/12/2022
 STAFF: lec
 wts2-888/crm-405/PWI: Move Remaining Pages from Flask+SQLAlchemy to Angular+Java API
 crm-395, crm-396, crm-402, crm-406
